<resources>
	<string name="app_name">Nemu</string>
	<string name="title_login">Login</string>
	<string name="title_home">Beranda</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_notifications">Notifikasi</string>
	<string name="title_activity_login">Masuk</string>

	<string name="dummy">This is text</string>
	<string name="welcome">"Welcome !"</string>

	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>

	<string name="action_sign_in">Masuk atau Daftar akun</string>
	<string name="action_sign_in_short">Masuk</string>

	<string name="invalid_username">Username yang Anda inputkan salah</string>
	<string name="invalid_password">Password harus lebih dari 5 karakter</string>

	<string name="login_failed">"Login failed"</string>
	<string name="title_profile">Profile</string>
	<string name="logout">Keluar</string>
	<string name="nemu">Nemu</string>
	<string name="golek">Golek</string>
	<string name="info_penemuan_barang">Info Penemuan</string>
	<string name="title">Judul</string>
	<string name="tulis_nama_barang">Tulis judul</string>
	<string name="categories">Kategori</string>
	<string name="description">Deskripsi</string>
	<string name="tulis_deskripsi_barang">Tulis deskripsi</string>
	<string name="location">Lokasi</string>
	<string name="tulis_lokasi_penemuan">Tulis lokasi penemuan</string>
	<string name="contact">Kontak</string>
	<string name="unggah_foto">Unggah Foto</string>
	<string name="upload">Unggah</string>
	<string name="submit">Kirim</string>
	<string name="info_pencarian_barang">Info Pencarian</string>
	<string name="tulis_lokasi_kehilangan">Tulis lokasi kehilangan</string>
	<string name="category">Kategori :</string>
	<string name="status">Status :</string>
	<string name="barang">Barang</string>
	<string name="pakaian">Pakaian</string>
	<string name="uang">Uang</string>
	<string name="hewan">Hewan</string>
	<string name="lainnya">Lainnya</string>
	<string name="penemuan">Penemuan</string>
	<string name="aku_nemu">Aku Nemu</string>
	<string name="aku_golek">Aku Golek</string>
	<string name="search_hint">Deskripsi...</string>
	<string name="action_search">Cari</string>
	<string name="tulis_no_telp">Tulis no.telp</string>

	<string-array name="category">
		<item>Pakaian</item>
		<item>Barang</item>
		<item>Uang</item>
		<item>Lainnya</item>
	</string-array>


	<string-array name="type">
		<item>Nemu</item>
		<item>Golek</item>
	</string-array>
</resources>
