<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".form.formGolek">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="20dp"
		android:paddingRight="20dp"
		android:scrollbars="none">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="28sp"
				android:text="@string/info_pencarian_barang"
				android:layout_marginBottom="20dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:text="@string/title"
				android:textStyle="bold"
				/>

			<EditText
				android:id="@+id/golek_et_subject"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text=""
				android:layout_marginTop="5dp"
				android:hint="@string/tulis_nama_barang"
				android:imeOptions="actionNext"
				android:singleLine="true"
				android:background="@drawable/input"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:text="@string/categories"
				android:textStyle="bold"
				android:layout_marginTop="15dp"/>

			<Spinner
				android:id="@+id/golek_sp_category"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="10dp"
				/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:text="@string/description"
				android:textStyle="bold"
				android:layout_marginTop="15dp"
				/>

			<EditText
				android:id="@+id/golek_et_description"
				android:layout_width="match_parent"
				android:layout_height="100dp"
				android:gravity="start|top"
				android:inputType="textMultiLine"
				android:layout_marginTop="5dp"
				android:background="@drawable/input"
				android:hint="@string/tulis_deskripsi_barang"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:text="@string/location"
				android:textStyle="bold"
				android:layout_marginTop="15dp"/>

			<EditText
				android:id="@+id/golek_et_location"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text=""
				android:layout_marginTop="5dp"
				android:hint="@string/tulis_lokasi_kehilangan"
				android:imeOptions="actionNext"
				android:singleLine="true"
				android:background="@drawable/input"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:text="@string/contact"
				android:textStyle="bold"
				android:layout_marginTop="10dp"/>

			<EditText
				android:id="@+id/golek_et_phone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="phone"
				android:layout_marginTop="5dp"
				android:maxLength="13"
				android:imeOptions="actionNext"
				android:singleLine="true"
				android:background="@drawable/input"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:text="@string/unggah_foto"
				android:textStyle="bold"
				android:layout_marginTop="10dp"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:orientation="horizontal">

				<ImageView
					android:id="@+id/golek_img_photo"
					android:layout_width="200dp"
					android:layout_height="100dp"
					android:adjustViewBounds="true"
					android:scaleType="centerCrop"
					android:layout_weight="1"
					android:src="@drawable/ic_launcher_background" />

				<Button
					android:id="@+id/golek_btn_upload"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:layout_weight="1"
					android:text="@string/upload"
					android:background="@drawable/btn_upload"
					/>
			</LinearLayout>

			<Button
				android:id="@+id/golek_btn_submit"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:text="@string/submit"
				android:background="@drawable/btn_rounded"
				android:textColor="#FFFFFF"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>