<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".form.formNemu">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingLeft="20dp"
		android:paddingRight="20dp"
		android:scrollbars="none">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:id="@+id/tv_title"
				android:gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="28sp"
				android:text="@string/info_penemuan_barang"
				android:layout_marginBottom="20dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:text="@string/title"
				android:textStyle="bold"/>

			<EditText
				android:id="@+id/nemu_et_subject"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text=""
				android:hint="@string/tulis_nama_barang"
				android:imeOptions="actionNext"
				android:singleLine="true"
				android:layout_marginTop="5dp"
				android:background="@drawable/input"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:textStyle="bold"
				android:layout_marginTop="15dp"
				android:text="@string/categories" />

			<Spinner
				android:id="@+id/nemu_sp_category"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:textStyle="bold"
				android:gravity="start|top"
				android:layout_marginTop="15dp"
				android:text="@string/description" />

			<EditText
				android:id="@+id/nemu_et_description"
				android:layout_width="match_parent"
				android:layout_height="100dp"
				android:inputType="textMultiLine"
				android:layout_marginTop="5dp"
				android:hint="@string/tulis_deskripsi_barang"
				android:background="@drawable/input"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:textStyle="bold"
				android:layout_marginTop="15dp"
				android:text="@string/location" />

			<EditText
				android:id="@+id/nemu_et_location"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text=""
				android:layout_marginTop="5dp"
				android:hint="@string/tulis_lokasi_penemuan"
				android:imeOptions="actionNext"
				android:singleLine="true"
				android:background="@drawable/input"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:textStyle="bold"
				android:layout_marginTop="15dp"
				android:text="@string/contact" />

			<EditText
				android:id="@+id/nemu_et_phone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="phone"
				android:layout_marginTop="5dp"
				android:maxLength="13"
				android:imeOptions="actionNext"
				android:singleLine="true"
				android:background="@drawable/input"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:textStyle="bold"
				android:layout_marginTop="15dp"
				android:text="@string/unggah_foto" />

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<ImageView
					android:id="@+id/nemu_img_photo"
					android:layout_width="150dp"
					android:layout_height="150dp"
					android:layout_marginHorizontal="00dp"
					android:layout_weight="1"
					android:adjustViewBounds="true"
					android:scaleType="centerCrop"
					android:src="@drawable/lainnya"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<Button
					android:id="@+id/nemu_btn_upload"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					android:layout_weight="1"
					android:background="@drawable/btn_upload"
					android:text="@string/upload"
					android:textColor="#FFFFFF"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toEndOf="@+id/nemu_img_photo"
					app:layout_constraintTop_toTopOf="parent" />
			</androidx.constraintlayout.widget.ConstraintLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:orientation="horizontal">

			</LinearLayout>

			<Button
				android:id="@+id/nemu_btn_submit"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:text="@string/submit"
				android:background="@drawable/btn_rounded"
				android:textColor="#FFFFFF"
                android:layout_marginBottom="20dp"/>
		</LinearLayout>
	</ScrollView>


</LinearLayout>