<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<!--Banner Top-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_header"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="#e5e5e5"
                app:cardCornerRadius="7dp"
                app:cardElevation="7dp"
                app:contentPadding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy" />

            </androidx.cardview.widget.CardView>

<!--         Slider Title-->
            <TextView
                android:id="@+id/tv_title_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/penemuan"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_header"
                android:layout_marginLeft="15dp" />


            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_pakaian"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="#e5e5e5"
                        app:cardCornerRadius="7dp"
                        app:cardElevation="5dp"
                        app:contentPadding="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_slider1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pakaian" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_barang"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="#e5e5e5"
                        app:cardCornerRadius="7dp"
                        app:cardElevation="5dp"
                        app:contentPadding="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_slider2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/barang" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_uang"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:elevation="5dp"
                        app:cardBackgroundColor="#e5e5e5"
                        app:cardCornerRadius="7dp"
                        app:contentPadding="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="16dp">

                        <TextView
                            android:id="@+id/tv_slider3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/uang" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_lainnya"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="#e5e5e5"
                        app:cardCornerRadius="7dp"
                        app:cardElevation="5dp"
                        app:contentPadding="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_slider4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lainnya" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_title_find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="Mari Bantu Mereka"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_header" />\

                <TextView
                    android:id="@+id/tv_golek_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="More" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/pb_list_golek_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_list_golek_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </ScrollView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>